; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_fw.c_mlx5_reg_mcqi_version_query.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_fw.c_mlx5_reg_mcqi_version_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_core_dev = type { i32 }

@MCQI_INFO_TYPE_VERSION = common dso_local global i32 0, align 4
@mcqi_version = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5_core_dev*, i32, i32, i32*)* @mlx5_reg_mcqi_version_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx5_reg_mcqi_version_query(%struct.mlx5_core_dev* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.mlx5_core_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.mlx5_core_dev* %0, %struct.mlx5_core_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @MCQI_INFO_TYPE_VERSION, align 4
  %13 = load i32, i32* @mcqi_version, align 4
  %14 = call i32 @MLX5_ST_SZ_BYTES(i32 %13)
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @mlx5_reg_mcqi_query(%struct.mlx5_core_dev* %9, i32 %10, i32 %11, i32 %12, i32 %14, i32* %15)
  ret i32 %16
}

declare dso_local i32 @mlx5_reg_mcqi_query(%struct.mlx5_core_dev*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @MLX5_ST_SZ_BYTES(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
